# dream-machine-hack

./: README.md  Untitled.ipynb  app.md  pyproject.toml  tutorial.ipynb
backend/: luma_client.py  main.py  requirements.txt
frontend/music-tutorial/: package-lock.json  package.json
frontend/music-tutorial/app/: page.js
